Navbar alignment and menu hover fixes.

--- a/scss/_boost_override.scss
+++ b/scss/_boost_override.scss
@@ -56,6 +56,14 @@
         &:last-child {
             border-bottom: 0;
         }
+        @include hover-focus {
+            a {
+                color: inherit;
+                .icon {
+                    color: inherit;
+                }
+            }
+        }
     }
     .dropdown-divider {
         display: none;
