--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -7,6 +7,7 @@
         padding-top: 0;
         padding-bottom: 0;
         .dropdown-toggle {
+            display: inline !important;
             padding-top: 8px;
             padding-bottom: 8px;
         }
